services/kubernetes/resource_example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example - ingress
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
